// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`some() should fail when no strings among values 1`] = `
Object {
  "message": "At least one item should follow the rule: Value should be a string",
  "path": Array [],
  "requirements": Array [
    Object {
      "message": "Value should be a string",
      "path": Array [
        "0",
      ],
      "type": "single",
      "value": 1,
    },
    Object {
      "message": "Value should be a string",
      "path": Array [
        "1",
      ],
      "type": "single",
      "value": null,
    },
    Object {
      "message": "Value should be a string",
      "path": Array [
        "2",
      ],
      "type": "single",
      "value": Object {},
    },
  ],
  "type": "alternative",
  "value": Array [
    1,
    null,
    Object {},
  ],
}
`;

exports[`some() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "requirements": Array [
    Object {
      "message": "Value should be a string",
      "path": Array [
        "0",
      ],
      "type": "single",
      "value": 1,
    },
    Object {
      "message": "Value should be a string",
      "path": Array [
        "1",
      ],
      "type": "single",
      "value": null,
    },
    Object {
      "message": "Value should be a string",
      "path": Array [
        "2",
      ],
      "type": "single",
      "value": Object {},
    },
  ],
  "type": "alternative",
  "value": Array [
    1,
    null,
    Object {},
  ],
}
`;
